--- a/package.json
+++ b/package.json
@@ -21,13 +21,8 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "bootstrap": "4.1.1",
-    "ng2-date-picker": "^11.0.0",
-    "ngx-bootstrap": "^6.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
     "body-parser": "^1.18.3",
+    "bootstrap": "4.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -40,7 +35,13 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
-    "path": "^0.12.7"
+    "ng2-date-picker": "^11.0.0",
+    "ngx-bootstrap": "^6.2.0",
+    "path": "^0.12.7",
+    "rxjs": "~6.6.0",
+    "sweetalert2": "^10.12.6",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
