--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines": {
+    "node": "14.15.0"
   }
 }
